--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sami/sami",
+    "name": "guanhui07/sami",
     "type": "application",
     "description": "Sami, an API documentation generator",
     "keywords": ["phpdoc"],
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.4.0",
         "pimple/pimple": "~3.0",
         "twig/twig": "~2.0",
         "nikic/php-parser": "~3.0",
